<resources>
    <string name="app_name">TutorJava</string>
    <string name="txtJava">Java Programming</string>
    <string name="aboutJava"> จากวิกิพีเดีย สารานุกรมเสรีไปยังการนำทางไปยังการค้นหาโลโก้ของภาษาจาวาภาษาจาวา
        (อังกฤษ: Java programming language) เป็นภาษาโปรแกรมเชิงวัตถุ
        (อังกฤษ: Object Oriented Programming) พัฒนาโดย เจมส์ กอสลิง
        และวิศวกรคนอื่นๆ ที่ ซัน ไมโครซิสเต็มส์ ภาษาจาวาถูกพัฒนาขึ้นในปี พ.ศ. 2534 (ค.ศ. 1991)
        โดยเป็นส่วนหนึ่งของ โครงการกรีน (the Green Project)
        และสำเร็จออกสู่สาธารณะในปี พ.ศ. 2538 (ค.ศ. 1995)
        ซึ่งภาษานี้มีจุดประสงค์เพื่อใช้แทนภาษาซีพลัสพลัส (C++)
        โดยรูปแบบที่เพิ่มเติมขึ้นคล้ายกับภาษาอ็อบเจกต์ทีฟซี (Objective-C)
        แต่เดิมภาษานี้เรียกว่า ภาษาโอ๊ก (Oak) ซึ่งตั้งชื่อตามต้นโอ๊กใกล้ที่ทำงานของ เจมส์ กอสลิง
        แต่ว่ามีปัญหาทางลิขสิทธิ์ จึงเปลี่ยนไปใช้ชื่อ "จาวา" ซึ่งเป็นชื่อกาแฟแทน </string>
    <string name="JDK">
        บทความนี้มีชื่อเป็นภาษาอังกฤษ เนื่องจากยังไม่มีชื่อภาษาไทยที่กระชับ เหมาะสม หรือไม่รู้วิธีอ่านในภาษาไทย
Java Development Kit (JDK) เป็นชุดคำสั่งในการพัฒนาโปรแกรมด้วยภาษาจาวา ซึ่งชุดพัฒนาโปรแกรม JDK ประกอบด้วย 3 รุ่นย่อยดังนี้

Java SE (Standard Edition) สำหรับพัฒนาโปรแกรมบนคอมพิวเตอร์เดสก์ทอปทั่วไป
Java ME (Micro Edition) สำหรับพัฒนาโปรแกรมบนอุปกรณ์พกพา เช่น โทรศัพท์มือถือ หรือพีดีเอ ส่วนมากใช้เขียนโปรแกรมเกม
Java EE (Enterprise Edition) สำหรับพัฒนาโปรแกรมในองค์กรใหญ่ๆ หรือมีขอบเขตของโครงการกว้างมาก
ชุดพัฒนาโปรแกรม JDK นั้น เป็นมาตรฐานที่ถูกกำหนดโดยบริษัทซัน ไมโครซิสเต็มส์ และมีผู้พัฒนาชุดพัฒนาโปรแกรม JDK ออกมามากมาย เช่น ซัน ไมโครซิสเต็มส์, ไอบีเอ็ม, และบีอีเอ ซิสเต็มส์
    </string>
    <string name="GroupDev">การดาวน์โหลดและติดตั้งชุดพัฒนาซอฟแวร์</string>
    <string name="content">สารบัญ</string>
    <string name="step_install">ขั้นตอนการติดตั้งโปรแกรม</string>
    <string name="step_install1">1) ขั้นตอนที่หนึ่ง</string>
    <string name="step_install2">2) ขั้นตอนที่สอง</string>
    <string name="step_install3">3) ขั้นตอนที่สาม</string>
    <string name="kin_variable">ชนิดของข้อมูลและตัวแปร</string>
    <string name="exit">ออกโปรแกรม</string>
    <string name="AboutJavaTechnology">
        เทคโนโลยี จาวา เป็นทั้งภาษาโปรแกรมและแพลตฟอร์ม
    </string>
    <string name="JavaLanguage">
        ภาษาโปรแกรม จาวา เป็นภาษาระดับสูงที่สามรถโดดเด่นด้วย buzzwords ดังต่อไปนี้
    </string>
    <string name="JavaLanguage2">
        .Simple             .Architecture neutral
    </string>
    <string name="JavaLanguage3">
        .Object oriented    .Portable
    </string>
    <string name="JavaLanguage4">
        .Distributed        .High performance
    </string>
    <string name="JavaLanguage5">
        .Multithreaded      .Robust
    </string>
    <string name="JavaLanguage6">
         .Dynamic            .Secure
    </string>
    <string name="JavaLanguage7">
            คำศัพท์แต่ละคำอธิบายไว้ใน The Java Language Environment เขียนโดย James Gosling และ Henry McGilton
        ในภาษาการเขียนโปรแกรม จาวา ซอร์สโค้ดทั้งหมดจะถูกเขียนครั้งแรกในไฟล์ข้อความล้วนลงท้ายด้วยนามสกุล.Java ไฟล์ต้นฉบับเล่านั้นจะถูกรวบรวมเป็น.Class ไฟล์ โดยจาวาคอมไพเลอร์
        .Class ไฟล์ไม่ได้มีรหัสที่มีถิ่นกำเนิดในการประมวลผล แต่มีการ bytecode - ภาษาเครื่องของ Java Virtual Machine (Java VM)
    </string>
    <string name="JavaLanguage8">
            เนื่องจาก Java VM มีอยู่ในระบบปฎิบัติการ ที่แตกต่างกันมาก .class ไฟล์เดัยวกันจึงสามารถ เรัยกใช้บน Microsoft Windows ,Linux หรือ Mac OS เครื่องเสมือนบางเครื่องเช่น
        Java SE HotSpot โดยย่อทำตามขั้นตอนเพิ่มเติมตอนรันไทม์เพื่อเพิ่มประสิทธิภาพให้แอปพลิเคชั่นของคุณ ซึ่งรวมถึงงานต่าง ๆ เช่นการค้นหาคอขวดของประสิทธิภาพและการคอมไพล์ซ้ำ (เป็นรหัสเนทีฟ)ส่วนที่ใช้บ่อยของโค้ด
    </string>
    <string name="JavaLanguage9">
        ผ่าน Java VM แอปพลิเคชันเดียวกันสามารถทำงานบนหลายแพลตฟอร์มได้
    </string>
    <string name="JavaLanguage10">
        แพลฟอร์ม จาวา
    </string>
    <string name="JavaLanguage11">
            แพลตฟอร์ม คือ อาร์ดแวร์หรือซอฟต์แวร์สภาพแวดล้อมที่โปรแกรมทำงาน เราได้กล่าวถึงแพลตฟอร์มยอกนิยมบางอย่างเช่น Microsoft Windows,Linux,Mac OS แล้ว แพลตฟอร์มส่วนใหญ่
        สามรถอธิบายได้ว่าเป็นการรวมกันของระบบปฎิบัติการและฮาร์ดแวร์พื้นฐาน แพลตฟอร์ม จาวา แตกต่างจากแพลตฟอร์มอื่นๆ ส่วนใหญ่วึ่งเป้นแพลตฟอร์มเฉพาะซอฟต์แวร์ที่ทำงานบนแพลตฟอร์มฮาร์ดแวร์อื่นๆ
    </string>
    <string name="JavaLanguage12">
        แพลตฟอร์ม จาวา มีสององค์ประกอบ
    </string>
    <string name="JavaLanguage13">
        .โปรแกรม Java Virtual Machine
    </string>
    <string name="JavaLanguage14">
        .Java Application Programming Interface(API)
    </string>
    <string name="JavaLanguage15">
        คุณได้รับการแนะนำให้รู้จักกับ Java Virtual Machine มันเป็นฐานสำหรับแพลตฟอร์มจาวา และพอร์ตไปยังแพลตฟอร์มที่ใช้ฮาร์ดแวร์ต่างๆ
    </string>
    <string name="JavaLanguage16">
        API เป็นชุดซอฟต์แวร์ ซอฟต์แวร์สำเร็จรูปที่มีความสามรถที่มีประโยชน์มากมาย ถุกแบ่งออกเป็นไลบรารีของคลาสและอินเทอร์เฟซที่เกี่ยวข้อง ป็นที่รู้จักกันว่า เป็นแพคเกจ
        เทคโนโลยีจาวาสามารถทำอะไรได้บ้าง การทำงานบางอย่างเน้นไปที่ฟังชันของ API
    </string>
    <string name="JavaLanguage17">
        API และ Java Virtual Machine ป้องกันโปรแกรมจากฮาร์ดแวร์พื้นฐาน
    </string>
    <string name="JavaTechnology">
        เทคโนโลยีจาวาจะเปลี่ยนชีวิตรของฉันได้อย่งไร
    </string>
    <string name="JavaTechnology2">
        เราไม่สามรถรับประกันได้ว่าคุณจะมีชื่อเสียงโชคลาภหรือแม้แต่งานถ้าคุณเรียนรู้ภาษาการเขียนโปรแกรมจาวา ถึงกระนั้นก้มีแนวโน้มที่จะทำให้โปรแกรมของคุณและต้องการความพยายามน้อยกว่าภาษาอื่น ๆ เราเชื่อว่าเทคโนโลยี จาวา
        จะช่วยให้คุณทำสิ่งต่อไปนี้
    </string>
    <string name="JavaTechnology3">
        .เริ่มต้นอย่างรวดเร็ว : แม้ว่าภาษาการเขียนโปรแกรม จาวา เป็นภาษาเชิงวัตถุที่ทรงพลัง แต่ก้เรียนรู้ได้ง่ายโดยเฉพาะอย่างยิ่งสำหรับโปรแกรมเมอร์ที่คุ้นเคยกับ C หรือ C++ แล้ว
    </string>
    <string name="JavaTechnology4">
        .เขียนโค้ดที่น้อยกว่า : การเปรียบเทียบตัวชี้วัดของดปรแกรม(จำนวนคลาส,จำนวนเมธอดและอื่น ๆ)แนะนำให้โปรแกรมที่เขียนด้วยภาษาโปรแกรมจาวา สามรถที่มีขนาดเล้กกว่าโปรแกรมที่เขียนด้วย C ++ สี่เท่า
    </string>
    <string name="Object_Oriented">
        คลาส คืออะไร
    </string>
    <string name="Object_Oriented2">
        ในโลกแห่งความเป็นจริงคุณมักพบวัตถุหลายชิ้นที่เหมือนกันทั้งหมด อาจมีจักรยานอีกหลายพันคันที่มียี่ห้อและรุ่นเดียวกันทั้งหมด จักรยานแต่ละคันถูกสร้างจากพิมพ์เขียวชุดเดียวกันดังนั้นจึงมีส่วนประกอบเดียวกัน
         ในแง่เชิงวัตถุเราบอกว่าจักรยานของคุณเป็นตัวอย่างของ คลาส ของวัตถุที่เรียกว่าจักรยาน ระดับคือพิมพ์เขียวจากการที่วัตถุที่บุคคลที่ถูกสร้างขึ้น
    </string>
    <string name="Object_Oriented3">
        Bicycle คลาสต่อไปนี้เป็นการนำจักรยานไปใช้งานได้
    </string>
    <string name="Object_Oriented4">
        class Bicycle {
    </string>
    <string name="Object_Oriented5">
        int cadence = 0 ;
    </string>
    <string name="Object_Oriented6">
        int speed = 0 ;
    </string>
    <string name="Object_Oriented7">
        int gear = 1 ;
    </string>
    <string name="Object_Oriented8">
        void changeCadence ( int newValue ) {
    </string>
    <string name="Object_Oriented9">
        cadence = newValue ;
    </string>
    <string name="Object_Oriented10">
        }
    </string>
    <string name="Object_Oriented11">
        void changeGear ( int newValue ) {
    </string>
    <string name="Object_Oriented12">
        gear = newValue ;
    </string>
    <string name="Object_Oriented13">
        }
    </string>
    <string name="Object_Oriented14">
        void speedUp ( int increment ) {
    </string>
    <string name="Object_Oriented15">
        speed = speed + increment ;
    </string>
    <string name="Object_Oriented16">
        }
    </string>
    <string name="Object_Oriented17">
        void applyBrakes ( int decrement ) {
    </string>
    <string name="Object_Oriented18">
        speed = speed - decrement ;
    </string>
    <string name="Object_Oriented19">
        }
    </string>
    <string name="Object_Oriented20">
        void printStates () ( int newValue ) {
    </string>
    <string name="Object_Oriented21">
        System.out.println ( "'cadence :'" + cadence + "'speed :'" + speed + "'gear : '" + gear ) ;
    </string>
    <string name="Object_Oriented22">
        }
    </string>
    <string name="Interface">Interface</string>
    <string name="Interface2">
        Interface คืออะไร
    </string>
    <string name="Interface3">
        ในขณะที่คุณเรียนรู้แล้ววัตถุกำหนดปฏิสัมพันธ์ของพวกเขากับโลกภายนอกผ่านวิธีการที่พวกเขาเปิดเผย วิธีสร้างส่วนต่อประสานของวัตถุจากโลกภายนอก ตัวอย่างเช่นปุ่มที่อยู่ด้านหน้าของโทรศัพท์ของคุณเป็นส่วนต่อประสาน
        ระหว่างคุณกับสายไฟที่อีกด้านหนึ่งของปลอกพลาสติก คุณกดปุ่ม พลังงานเพื่อเปิดและปิดโทรศัพท์
    </string>
    <string name="Interface4">
        interface Bicycle {
    </string>
    <string name="Interface5">
        //wheel revolution per minute
    </string>
    <string name="Interface6">
        void changeCadence ( int newValue ) ;
    </string>
    <string name="Interface7">
        void changeGear ( int newValue ) ;
    </string>
    <string name="Interface8">
        void speedUp ( int increment ) ;
    </string>
    <string name="Interface9">
        void applyBrakes ( int decrement ) ;
    </string>
    <string name="Interface10">
        }
    </string>
    <string name="Interface11">
        ในการใช้อินเทอร์เฟซชื่อคลาสของคุรจะเปลี่ยบน (เป็นแบรนด์ของจักรยานเฉพาะเช่น ACMEBicycle) และคุรจะใช้ implement เป็นคำหลักในการประกาศคลาส
    </string>
    <string name="Interface12">
        class ACNEBicycle implement Bicycle {
    </string>
    <string name="Interface13">
        int cadence = 0 ;
    </string>
    <string name="Interface14">
        int speed = 0 ;
    </string>
    <string name="Interface15">
        int gear = 1 ;
    </string>
    <string name="Interface16">
        //The compiler will now require that methods
    </string>
    <string name="Interface17">
        //changCadence,changeGear,speedUp,and applyBrakes
    </string>
    <string name="Interface18">
        //all be implemented. Compilation will fail if those
    </string>
    <string name="Interface19">
        //methods are missing from this class.
    </string>
    <string name="Interface20">
        void changeCadence ( int newValue ) {
    </string>
    <string name="Interface21">
        cadence = newValue ;
    </string>
    <string name="Interface22">
        }
    </string>
    <string name="Interface23">
        void changeGear ( int newValue ) {
    </string>
    <string name="Interface24">
        gear = newValue ;
    </string>
    <string name="Interface25">
        }
    </string>
    <string name="Interface26">
        void speedUp ( int increment ) {
    </string>
    <string name="Interface27">
        speed = speed + increment ;
    </string>
    <string name="Interface28">
        }
    </string>
    <string name="Interface29">
        void applyBrakes ( int decrement ) {
    </string>
    <string name="Interface30">
        speed = speed + decrement ;
    </string>
    <string name="Interface31">
        }
    </string>
    <string name="Interface32">
        void printStates ( ) {
    </string>
    <string name="Interface33">
        System.out.println ("'cadence :'" + cadence + "'speed :'" + speed + "'gear :'" + gear ) ;
    </string>
    <string name="Interface34">
        }
    </string>
    <string name="Interface35">
        }
    </string>
    <string name="Interface36">
        การใช้อินเทอร์เฟซช่วยให้คลาสมีความเป็นทางการมากขึ้น เกี่ยวกับพฤติกรรมที่สัญญาไว้ อินเทอร์เฟซแบบสัญญาระหว่างคลาส และโลกภายนอก และสัญญาที่มีผลบังคับใช้ในการสร้างเวลาโดยคอมไพเลอร์
         หากคลาสของคุณอ้างว่าใช้อินเทอร์เฟซวิธีการทั้งหมดที่กำหนดโดยส่วนต่อประสานนั้นจะต้องปรากฏในซอร์สโค้ดก่อนที่คลาสจะคอมไพล์สำเร็จ
    </string>
    <string name="Interface37">
        หมายเหตุ : ในการรวบรวม ACMEBicycle ในการใช้งานจริงคุรจะต้องเพิ่ม public เป็นคำหลักที่จุดเริ่มต้นของวิธีการอินเทอร์เฟซที่นำมาใช้
    </string>
</resources>