<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbarContentLesson1_2"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_margin="@dimen/Margin"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/JavaTechnology"
                    android:textSize="@dimen/H1"
                    android:textStyle="bold"
                    android:textColor="@color/back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="@dimen/Margin"
                    android:text="@string/JavaTechnology2"
                    android:textSize="@dimen/H2"
                    android:textColor="@color/back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="@dimen/Margin"
                    android:text="@string/JavaTechnology3"
                    android:textSize="@dimen/H2"
                    android:textColor="@color/back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="@dimen/Margin"
                    android:text="@string/JavaTechnology4"
                    android:textSize="@dimen/H2"
                    android:textColor="@color/back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="@dimen/Margin"
                    android:text=""
                    android:textSize="@dimen/H2"
                    android:textColor="@color/back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</LinearLayout>